--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.9.0",
+    "axios": "^1.10.0",
+    "axios-cookiejar-support": "^6.0.2",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
@@ -44,9 +45,10 @@
     "pdfkit": "^0.14.0",
     "puppeteer": "^24.9.0",
     "sequelize": "^6.6.5",
+    "sqlite3": "^5.0.2",
     "sweetalert2": "^11.10.5",
-    "winston": "^3.11.0",
-    "sqlite3": "^5.0.2"
+    "tough-cookie": "^5.1.2",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "chai": "^4.5.0",
