--- a/package.json
+++ b/package.json
@@ -29,11 +29,11 @@
     "exceljs": "^4.4.0",
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.1",
+    "express-rate-limit": "^7.5.1",
     "express-session": "^1.17.3",
     "express-validator": "^7.2.1",
     "handlebars": "^4.7.8",
     "helmet": "^7.1.0",
-    "html-pdf": "^3.0.1",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "multer": "^1.4.5-lts.1",
